--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,37 @@
+@ARTICLE{Bennert:10,
+   author = {{Bennert}, V.~N. and {Treu}, T. and {Woo}, J.-H. and {Malkan}, M.~A. and 
+	{Le Bris}, A. and {Auger}, M.~W. and {Gallagher}, S. and {Blandford}, R.~D.
+	},
+    title = "{Cosmic Evolution of Black Holes and Spheroids. IV. The M $_{BH}$-L $_{sph}$ Relation}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0911.4107},
+ primaryClass = "astro-ph.CO",
+ keywords = {accretion, accretion disks, black hole physics, galaxies: active, galaxies: evolution, quasars: general},
+     year = 2010,
+    month = jan,
+   volume = 708,
+    pages = {1507-1527},
+      doi = {10.1088/0004-637X/708/2/1507},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...708.1507B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Barnabe:14,
+   author = {{Barnab{\`e}}, M. and {Spiniello}, C. and {Koopmans}, L.~V.~E.
+	},
+    title = "{Dissecting the 3D structure of elliptical galaxies with gravitational lensing and stellar kinematics}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1409.4197},
+ keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2014,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1409.4197B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Gavazzi:07,
    author = {{Gavazzi}, R. and {Treu}, T. and {Rhodes}, J.~D. and {Koopmans}, L.~V.~E. and 
 	{Bolton}, A.~S. and {Burles}, S. and {Massey}, R.~J. and {Moustakas}, L.~A.
