implemented rogers comments

--- a/ms.tex
+++ b/ms.tex
@@ -209,7 +209,7 @@ As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, plausibl
 
 We also find that the detection significance of the central images can significantly increase for an extended source with a radius of 1 kpc compared to a point source. Since extended sources occupy a larger area of the source plane, which may cover regions with higher magnifications, the resulting flux can be larger than the flux of more compact sources. The solid blue curve in Figure \ref{fig:3} shows increase in the flux of the demagnified image for a larger source (with a radius of 1 kpc). In contrast, the flux of a source with a radius of 250 pc can be severely supressed (dotted grey curve). 
 As the source galaxies are undergoing prodigious star formation, these large source sizes are reasonable and in agreement with observations \cite{hezaveh:13b}.
-More extended and intrinsically brighter emission lines such as C[II], the brightest molecular line in high redshift galaxies, are therefore the most ideal targets for such observations.% \red{which lines are optimal as a function of zs?}
+More extended and intrinsically brighter emission lines such as C[II], the brightest molecular line in high redshift galaxies, are therefore the most ideal targets for such observations.
 
 \begin{figure}
 \begin{center}
